src/k8s/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: inventory_service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 7001
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: shop
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
    - name: http
      port: 7001
      targetPort: 7001
