src/k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: order_service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7002
              name: http
          livenessProbe:
            httpGet:
              path: /swagger/index.html
              port: 7002
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /swagger/index.html
              port: 7002
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: shop
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - name: http
      port: 80
      targetPort: 7002
